plugins/kotlin/idea/tests/testData/highlighterMetaInfo/jvm/NonExistingKotlinMethodFromJava.kt.highlighting
// FIR_IDENTICAL
// ALLOW_ERRORS
// FILE: JavaClass.java

class JavaClass {
    void test(KotlinClass param) {
        param.<!HIGHLIGHTING("severity='ERROR'; descr='Cannot resolve method 'nonExistingMethod' in 'KotlinClass''")!>nonExistingMethod<!>("hello");
        param.<!HIGHLIGHTING("severity='ERROR'; descr='Cannot resolve method 'nonExistingMethod' in 'KotlinClass''")!>nonExistingMethod<!>(materialize());
    }

    <T> T materialize() {
        return null;
    }
}
